apps/prod/go-podcaster/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-podcaster
  namespace: prod
  labels:
    app: go-podcaster
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: go-podcaster
  template:
    metadata:
      labels:
        app: go-podcaster
    spec:
      containers:
        - name: go-podcaster
          image: ghcr.io/svdx9/go-podcaster:0.0.4
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /v1/episodes
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /v1/episodes
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: go-podcaster-data
